src/Dashboard/Dash-main/dash-main.css
.dash-main {
    display: flex;
    align-items: flex-start;
    justify-content: flex-start;
    width: 90%;
    height: 100vh;
}

.dash-main-cn {
    display: flex;
    align-items: flex-start;
    justify-content: center;
    width: 800px;
    border-radius: .5rem;
    flex-direction: column;
}

@media (max-width: 800px) {
    .dash-main-cn {
        width: 100%;
    }

    .dash-main {
        width: 95%;
    }
}

.dash-main-bank img {
    width: 25px;
    height: auto;
}

.dash-main-bank {
    display: flex;
    align-items: center;
    justify-content: flex-start;
    gap: .5rem;
    font-family: 'monospace', sans-serif;
    width: 100%;
    padding: 0 0 .6rem .6rem;
}

.dash-title-user {
    padding: 1rem;
    width: 100%;
}

/* ESTILOS SEPARADOS DEL COMPONENTE */

.dash-utils {
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: flex-start;
    flex-direction: column;
    border: 2px dashed #42424279;
    margin-top: 1.2rem;
    margin-right: 1rem;
    border-radius: 12px;
    min-height: 300px;
    gap: 1rem;
}


.dash-utils-cn {
    width: 100%;
    display: flex;
    align-content: center;
    justify-content: center;
    gap: .5rem;
    flex-direction: column;
    background: #47474710;
    padding: 1rem;
    border-radius: 12px 12px 0px 0px;
}

@media (max-width: 800px) {
    .dash-utils {
        margin-right: 0;
        border: 1px dashed #42424279;
    }

    .dash-user-info h1 {
        font-size: 16px;
    }

    .dash-utils-cn p {
        font-size: .8rem;
    }
}

.dash-user-info img {
    width: 25px;
    height: auto;
}

.dash-user-info {
    display: flex;
    align-items: center;
    justify-content: flex-start;
    gap: .5rem;
}

.dash-user-info h1 {
    font-size: 1.1rem;
}

.dash-info-user-account {
    color: rgb(170, 169, 169);
    font-size: 14px;
}

/* ESTILOS SEPARADOS DEL COMPONENTE */

